--- a/natives/src/main/cpp/CMakeLists.txt
+++ b/natives/src/main/cpp/CMakeLists.txt
@@ -54,7 +54,7 @@ add_custom_target(build_java
 )
 
 add_custom_target(generate_javadoc
-  COMMAND ${Java_JAVADOC_EXECUTABLE} -d ${TDNATIVES_DOCS_BIN_DIR} it.tdlight.jni
+  COMMAND ${Java_JAVADOC_EXECUTABLE} -encoding UTF-8 -charset UTF-8 -d ${TDNATIVES_DOCS_BIN_DIR} it.tdlight.jni
   WORKING_DIRECTORY ${TD_API_JAVA_PATH}
   COMMENT "Generating Javadoc documentation"
   DEPENDS td_generate_java_api
