--- a/.github/workflows/tdapi_file.yaml
+++ b/.github/workflows/tdapi_file.yaml
@@ -38,6 +38,7 @@ jobs:
           server-id: mchv-snapshot-distribution
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
+          cache: 'maven'
       - name: Setup Java (Release)
         if: github.ref != 'refs/heads/develop'
         uses: actions/setup-java@v3
@@ -47,6 +48,7 @@ jobs:
           server-id: mchv-release-distribution
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
+          cache: 'maven'
       - name: Setup variables
         shell: bash
         run: |
