--- a/.github/workflows/tdapi_file.yaml
+++ b/.github/workflows/tdapi_file.yaml
@@ -81,7 +81,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: tdlight-api-${{env.REVISION}}-legacy.jar
-          path: api/target/tdlight-api-${{env.REVISION}}-legacy.jar
+          path: api/target-legacy/tdlight-api-${{env.REVISION}}-legacy.jar
       - name: Deploy to Maven (Snapshot)
         if: github.ref != 'refs/heads/master'
         shell: bash
@@ -116,7 +116,7 @@ jobs:
           mvn -f api/pom.xml clean package -Dlegacy=true -Drevision="$REVISION"
           mvn org.apache.maven.plugins:maven-deploy-plugin:3.1.1:deploy-file -Durl=https://mvn.mchv.eu/repository/mchv \
                                                                             -DrepositoryId=mchv-release-distribution \
-                                                                            -Dfile=api/target/tdlight-api-$REVISION-legacy.jar \
+                                                                            -Dfile=api/target-legacy/tdlight-api-$REVISION-legacy.jar \
                                                                             -DpomFile=api/pom.xml \
                                                                             -Dclassifier=bin \
                                                                             -Drevision="$REVISION"
