--- a/natives/pom.xml
+++ b/natives/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.tdlight</groupId>
-  <artifactId>TDLight-natives</artifactId>
+  <artifactId>tdlight-natives</artifactId>
   <!-- Don't change the version! (or change it also in <shadedPattern>) -->
   <version>${revision}</version>
   <name>tdlight natives</name>
@@ -10,6 +10,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <revision>4.0.0-SNAPSHOT</revision>
     <native.type.classifier>_invalid_</native.type.classifier>
+    <buildDirectory>${project.basedir}/target-${native.type.classifier}</buildDirectory>
   </properties>
   <distributionManagement>
     <repository>
@@ -30,6 +31,7 @@
     <tag>HEAD</tag>
   </scm>
   <build>
+    <directory>${buildDirectory}</directory>
     <plugins>
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
@@ -73,37 +75,21 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>3.0.0-M1</version>
+        <version>3.1.1</version>
+        <configuration>
+          <allowIncompleteProjects>true</allowIncompleteProjects>
+        </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
+        <version>3.1.1</version>
+        <configuration>
+          <allowIncompleteProjects>true</allowIncompleteProjects>
+        </configuration>
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>ssl3</id>
-      <activation>
-        <property>
-          <name>ssl3</name>
-          <value>True</value>
-        </property>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>3.2.0</version>
-            <configuration>
-              <classifier>${native.type.classifier}-ssl3</classifier>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
